2002-03-31  wakaba <w@suika.fam.cx>

	* show-comment.html: Support visualiazation
	of STYLE, SCRIPT, NOSCRIPT, NOEMBED, NOFRAMES,
	COMMENT elements.
	
	* Makefile: New file.

2002-03-30  wakaba <w@suika.fam.cx>

	* ChangeLog: New file.
	
	* *.html: New files.
	
	* mkreg.bat, mkreg.pl: New files.
	* doc/: New directory.