@@ -2,8 +2,11 @@
      datetime attribute of INS, DEL elements,
      longdesc attribute of IMG elements, 
      summary attribute of TABLE element.
-#name Show relative URIs
+#name Show related URIs
 #context default image table
+Note: `relative' of filename is only a typo:-)  This file
+      does NOT provide the function to show RELATIVE URI(s),
+      but to show RELATED URI(s).
 -->
 <script language="JScript" defer="defer">
 var doc = external.menuArguments.document;
@@ -119,5 +122,5 @@ along with this program; see the file COPYING.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 Boston, MA 02111-1307, USA.
 
-$Date: 2002/03/30 13:47:56 $
+$Date: 2002/05/25 21:53:47 $
 -->
